--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/react-redux": "^6.0.3",
+        "@types/react-router": "^4.0.29",
+        "@types/react-router-dom": "^4.2.7",
+        "axios": "^0.18.0",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
-        "react-scripts-ts": "2.16.0"
+        "react-paginate": "^5.2.3",
+        "react-redux": "^5.0.7",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
+        "react-scripts-ts": "*",
+        "redux": "^4.0.0",
+        "redux-promise-middleware": "^5.1.1",
+        "redux-thunk": "^2.3.0",
+        "webpack-dev-server": "^3.1.4"
     },
     "scripts": {
         "start": "set PORT=8000 && react-scripts-ts start",
@@ -14,9 +26,9 @@
         "eject": "react-scripts-ts eject"
     },
     "devDependencies": {
-        "@types/jest": "^23.3.1",
-        "@types/node": "^10.5.4",
-        "@types/react": "^16.4.7",
+        "@types/jest": "^23.1.2",
+        "@types/node": "^10.3.6",
+        "@types/react": "^16.4.2",
         "@types/react-dom": "^16.0.6",
         "typescript": "^2.9.2"
     }
