--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "firebase-admin": "~5.13.0",
     "firebase-functions": "^2.0.0",
+    "googleapis": "^27.0.0",
     "mongoose": "^5.2.5"
   },
   "private": true
